--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.4",
     "@smastrom/react-rating": "^1.3.2",
+    "@stripe/react-stripe-js": "^2.3.2",
+    "@stripe/stripe-js": "^2.1.11",
     "@tanstack/react-query": "^5.8.2",
     "axios": "^1.6.1",
     "firebase": "^10.6.0",
